2005-03-01  Mark Schreiber <mark7@alumni.cmu.edu>

	* ftpclass.cc, NetAccess.cc, NetAccess.h: use TOS on ftp connections.

2005-02-25  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: set C locale before time conversion (fixes Last-Modified
	  parsing).
	* FileSetOutput.cc: get time format at run time, not statically.
	* Http.cc, resource.cc: add use-propfind and use-mkcol settings, turn
	  them off by default for hftp.

2005-02-23  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc, HttpDir.cc, HttpDir.h, HttpDirXML.cc: compile without
	  expat.
	* SFtp.cc: fix Buffered so that it does not return more than possible.
	* misc.cc: fix guess_year for timezone mismatches.

2005-02-10  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc: more verbose error for NOT_SUPP.
	* Http.cc: add NOT_SUPP error for MP_LIST mode.
	* HttpDir.cc, HttpDirXML.cc, HttpDir.h: add support for MP_LIST
	  transformation into human readable listing.
	* ftpclass.cc: don't send further commands until data socket is
	  connected (in sync mode).

2005-02-08  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: split off FileCopyPeerOutputJob.
	* FileSet.cc, FileSet.h, FileSetOutput.cc, FileSetOutput.h,
	  commands.cc: add support for reverse sorting.
	* example2.cc: blocking fix.
	* FileCopyOutputJob.cc: new file (split from FileCopy.cc).
	* Makefile.am: move some modules to libtasks, where they belong.

2005-02-04  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h: move entity_content_type here; add
	  entity_charset.
	* FileSet.cc, FileSet.h: (allocated) new member; optimize memory
	  allocation.
	* Http.cc, Http.h: make atotm a static method; implement MP_LIST
	  as PROPFIND; extract entity charset.
	* HttpDir.cc, HttpDir.h: try MP_LIST; call ParseProps.
	* HttpDirXML.cc: new file; implement ParseProps.

2005-02-03  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: don't set error when optional STAT or FSTAT return error.